# ciris-website

./: .gitignore  ACCORD_TERMINOLOGY_NOTES.md  CLAUDE.md  COVENANT_TERMINOLOGY_NOTES.md  next-sitemap.config.js  next.config.mjs  package-lock.json  package.json  sonar-project.properties  wrangler.jsonc
.github/workflows/: sonar.yml
.source/: index.ts
coherence-kernel/: Cargo.toml
coherence-kernel/pkg/: .gitignore  coherence_kernel.d.ts  coherence_kernel.js  coherence_kernel_bg.js  coherence_kernel_bg.wasm  coherence_kernel_bg.wasm.d.ts  package.json
coherence-kernel/src/: lib.rs
content/docs/: meta.th.json
docs/: design-asks-rebuild.md  design-asks-round2.dc.html  design-asks-round2.md  og-cards-v2-design-ask.md  og-image-design-brief.md  rebuild-structure.md  site-simplification-map.md
docs/navigation/: site_inventory.yaml
public/: CIRIS_COMPREHENSIVE_GUIDE.md  _headers  _redirects  app-store-metadata.md  canary.json  ciris_accord.txt  ciris_covenant.txt  golden-paths.md  install.sh  llms-full.txt  llms.txt
public/source-materials/: asean_guide_v1.txt  eu_hleg_v1.txt  ieee_ead_v1.txt
public/traces/: trace_ACCEPT_INCOMPLETENESS_28f3895b.json  trace_ACCEPT_INCOMPLETENESS_9495c03a.json  trace_EVALUATE_RESILIENCE_36279c9e.json  trace_EVALUATE_RESILIENCE_45de15ef.json  trace_EXPRESS_GRATITUDE_763e85d5.json  trace_EXPRESS_GRATITUDE_9bc409cf.json  (+4 more)
scripts/: STORY_AGENT_GUIDE.md  apply_review.js  indexnow.mjs  merge-loc-result.mjs  merge-loc-slices.mjs  merge_stories.js  safe-build.mjs  shot.sh  sign-canary.py  slice_source_materials.js
src/i18n/: pref.ts  (+3 more)
(+1452 files in other folders)
