[package]
name = "coherence-kernel"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "CIRIS Coherence kernel — CEG graph topology, Poincaré scale-tower embedding, corridor math. Per FSD at CIRISAgent#835."
repository = "https://github.com/CIRISAI/ciris-website"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6"
serde_json = "1.0.150"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

[package.metadata.wasm-pack.profile.release]
# Disable wasm-opt for now — wasm-pack ships an older wasm-opt that fails on
# newer rustc emit. Re-enable once the cached binary updates.
wasm-opt = false
